--- a/ArcSoftFaceDemo-master/pom.xml
+++ b/ArcSoftFaceDemo-master/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.arcsoft</groupId>
     <artifactId>arcsoft-face</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <name>arcsoft-face-demo</name>
     <description>人脸识别服务端完整demo</description>
