--- a/ArcSoftFaceDemo-master/pom.xml
+++ b/ArcSoftFaceDemo-master/pom.xml
@@ -32,7 +32,6 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.16.20</version>
-            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -96,7 +95,11 @@
             <scope>system</scope>
             <systemPath>${basedir}/lib/arcsoft-sdk-face-3.0.0.0.jar</systemPath>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.1</version>
+        </dependency>
     </dependencies>
 
     <build>
