--- a/ArcSoftFaceDemo-master/src/main/resources/application.properties
+++ b/ArcSoftFaceDemo-master/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.servlet.multipart.max-request-size=10MB
 
 server.port=8089
 
-config.arcface-sdk.sdk-lib-path=D:\\vmware\\test\\renlianshibie2
+config.arcface-sdk.sdk-lib-path=/renlianshibie2
 config.arcface-sdk.app-id=BH6YDkoGpAXUn5pzQPDftPYH49eiPaSkEU5P5M95VGQS
 config.arcface-sdk.sdk-key=GuaJJ65JLTCAWEjSzLVVMAfD2Wcz1sNjggov4gjxuPmg
 config.arcface-sdk.thread-pool-size=5
